--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "axios": "^1.9.0",
     "express": "^5.1.0",
-    "install": "^0.13.0"
+    "install": "^0.13.0",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.2"
   },
   "name": "test-project",
   "version": "1.0.0",
